# job_search_app

./: .gitignore  README.md  json_vacancies.json  main.py  pyproject.toml  requirements.txt
src/app/: job_search_app.py  job_search_meta.py
src/file_handler/: base_file_handler.py  json_file_handler.py
src/utils/: currency_converter.py
src/validation/: validation_vacancies.py
src/work/api/: base_api.py  hh_api.py  sj_api.py
